exports[`Bricks renders a complex example with multiple custon props 1`] = `
<div
  className="">
  <a
    aria-label={undefined}
    className="grommetux-anchor grommetux-brick grommetux-brick--2-2 grommetux-background-color-index-neutral-1 grommetux-brick--clickable"
    href="http://www.grommet.io/"
    id={undefined}
    onClick={undefined}
    target={undefined}>
    <div
      className="grommetux-brick__background"
      style={
        Object {
          "background": "url(/img/carousel-1.png) no-repeat center center",
          "backgroundSize": "cover"
        }
      }>
      <div>
        <div
          className="grommetux-brick__container" />
        <div
          className="grommetux-brick__label">
          <span />
        </div>
      </div>
    </div>
  </a>
  <div
    className="grommetux-brick grommetux-brick--1-2 grommetux-background-color-index-neutral-2"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container" />
      <div
        className="grommetux-brick__label">
        <span>
          Second
        </span>
      </div>
    </div>
  </div>
  <div
    className="grommetux-brick grommetux-brick--1-1 grommetux-background-color-index-neutral-3"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container">
        <svg
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24.3616"
          width="24px" />
      </div>
      <div
        className="grommetux-brick__label">
        <span>
          Third
        </span>
      </div>
    </div>
  </div>
  <div
    className="grommetux-brick grommetux-brick--1-1 grommetux-background-color-index-neutral-4"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container" />
      <div
        className="grommetux-brick__label">
        <span>
          Fourth
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bricks renders correctly when setting the colorIndex of Brick children 1`] = `
<div
  className="">
  <div
    className="grommetux-brick grommetux-brick--1-1 grommetux-background-color-index-neutral-1"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container" />
      <div
        className="grommetux-brick__label">
        <span>
          First
        </span>
      </div>
    </div>
  </div>
  <div
    className="grommetux-brick grommetux-brick--1-1 grommetux-background-color-index-neutral-2"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container" />
      <div
        className="grommetux-brick__label">
        <span>
          Second
        </span>
      </div>
    </div>
  </div>
  <div
    className="grommetux-brick grommetux-brick--1-1 grommetux-background-color-index-neutral-3"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container" />
      <div
        className="grommetux-brick__label">
        <span>
          Third
        </span>
      </div>
    </div>
  </div>
  <div
    className="grommetux-brick grommetux-brick--1-1 grommetux-background-color-index-neutral-4"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container" />
      <div
        className="grommetux-brick__label">
        <span>
          Fourth
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bricks renders correctly when setting the type of Brick children 1`] = `
<div
  className="">
  <div
    className="grommetux-brick grommetux-brick--1-1"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container" />
      <div
        className="grommetux-brick__label">
        <span>
          First
        </span>
      </div>
    </div>
  </div>
  <div
    className="grommetux-brick grommetux-brick--2-2"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container" />
      <div
        className="grommetux-brick__label">
        <span>
          Second
        </span>
      </div>
    </div>
  </div>
  <div
    className="grommetux-brick grommetux-brick--2-1"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container" />
      <div
        className="grommetux-brick__label">
        <span>
          Third
        </span>
      </div>
    </div>
  </div>
  <div
    className="grommetux-brick grommetux-brick--1-2"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container" />
      <div
        className="grommetux-brick__label">
        <span>
          Fourth
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bricks renders with the correct default options 1`] = `
<div
  className="">
  <div
    className="grommetux-brick grommetux-brick--1-1"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container" />
      <div
        className="grommetux-brick__label">
        <span>
          First
        </span>
      </div>
    </div>
  </div>
  <div
    className="grommetux-brick grommetux-brick--1-1"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container" />
      <div
        className="grommetux-brick__label">
        <span>
          Second
        </span>
      </div>
    </div>
  </div>
  <div
    className="grommetux-brick grommetux-brick--1-1"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container" />
      <div
        className="grommetux-brick__label">
        <span>
          Third
        </span>
      </div>
    </div>
  </div>
  <div
    className="grommetux-brick grommetux-brick--1-1"
    style={Object {}}>
    <div>
      <div
        className="grommetux-brick__container" />
      <div
        className="grommetux-brick__label">
        <span>
          Fourth
        </span>
      </div>
    </div>
  </div>
</div>
`;
